2001-12-30  olicha  <olivier.chapuis@free.fr>  

	* fvwm/window_flags.h: 
	* fvwm/session.c (MatchWinToSM):
	(LoadWindowStates):
	(SaveWindowStates):
	(get_version_string):
	* fvwm/move_resize.c (CMD_Maximize):
	(handle_stick):
	* fvwm/icons.c (CMD_Iconify):
	* fvwm/ewmh.c (EWMH_SetWMState):
	(EWMH_WindowInit):
	(EWMH_ExitStuff):
	(EWMH_SetAllowedActions):
	(EWMH_WindowInit):
	* fvwm/ewmh.h:
	* fvwm/ewmh_intern.h:
	* fvwm/ewmh_events.c (ewmh_WMState*):
	* fvwm/builtins.c (CMD_WindowShade):
	* fvwm/stack.c (new_layer):
	* fvwm/update.c (apply_window_updates):
	* fvwm/update.h (struct):
	* fvwm/add_window.c (setup_window_structure):
	(setup_window_name):
	(setup_icon):
	* fvwm/style.c (check_window_style_change):
	The skip list and modal ewmh window states are now updated after
	an use/ignore ewmh state style changes. The other ewmh states are
	starting state only. All the initial ewmh states are keep in memory
	for FvwmIdent.

	* fvwm/ewmh.c (EWMH_Handle*):
	* fvwm/fvwm.h:
	Set the ewmh_window_type to an int (and not the corresponding atom)
	accordingly to the window type

	* fvwm/ewmh_events.c (ewmh_WMStateModal):
	ewmh modal transient windows have RaiseTransient and GrabFocusTransient
	style
 
	* fvwm/ewmh.c (EWMH_GetStyle):
	* fvwm/ewmh_events.c (ewmh_WMDesktop):
	Respect the _NET_WM_DESKTOP hints at window mapping as a StartsOnDesk
	hints

	* libs/vpacket.h (ConfigWinPacket): 
	* fvwm/module_interface.c (CONFIGARGSNEW):
	(OLDCONFIGARGS):
	(CONFIGARGS):
	Added ewmh_hint_layer, ewmh_hint_desktop and ewmh_window_type to the
	cfgpacket for FvwmIdent

2001-12-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (resize_geometry_window):
	fixed wrong size calculation of geometry window

2001-12-19  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh_names.c (convert_charsets):
	More precise error messages

	* fvwm/fvwm2.1:
	A few formatting fixes

2001-12-18  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/gnome.c (GNOME_SetHints):